vpc/natgw.tf
resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.pubsubnet.id

  tags = {
    Name = "terranatgw"
  }
}
